# transrustate

./: Cargo.toml  README.md
src/: app.rs  app_event.rs  conjugations.rs  definitions.rs  lookup_event.rs  main.rs  user_error.rs  wordreference.rs
