[package]
name = "transrustate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"
tui = "0.18.0"
crossterm = "0.23"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
rusqlite = { version = "0.28.0", features = ["bundled"] }

[[bin]]
name = "transrustate"
path = "src/main.rs"
edition = "2021"
